<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="#fff"
        android:layout_height="wrap_content"
        tools:context="com.null_pointer.diarycloud.LogIn">
    <LinearLayout
android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_progress"
            tools:visibility="invisible" />
        <ImageView
            android:layout_width="80dp"
            android:layout_marginTop="50dp"
            android:layout_height="match_parent"
            android:maxWidth="80dp"
            android:layout_gravity="center"

            android:src="@drawable/main_icon"/>
    </LinearLayout>
        <android.support.v7.widget.CardView android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_centerInParent="true"
            android:padding="2dip"
            card_view:cardCornerRadius="4dp"
            style="@style/MyCardViewStyle"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="wrap_content">

        <EditText
            android:id="@+id/etLogin"
            android:hint="@string/username"
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/etMainTM"
            android:text="user"
            android:textAlignment="center"
            android:textColorHighlight="@color/main__color_main"
            android:inputType="text"/>
        <EditText
            android:id="@+id/etPassword"
            android:hint="@string/password"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/etMainTM"
            android:textAlignment="center"
            android:text="password"
            android:textColorHighlight="@color/main__color_main"
            android:inputType="textPassword"/>

        <CheckBox
            android:textColor="@color/main__color_main"
            android:id="@+id/keep_signed_in"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:text="@string/keep_me_signed_in" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#fff"
            android:background="@color/main__color_main"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginTop="@dimen/btnOkTM"
            android:text="@string/ok"/>
    </LinearLayout>
</android.support.v7.widget.CardView>

    </RelativeLayout>
</ScrollView>
