<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.v7.widget.CardView android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:padding="1dip"
        card_view:cardCornerRadius="1dp"
        style="@style/MyCardViewStyle"
        xmlns:card_view="http://schemas.android.com/apk/res-auto">
        <LinearLayout
            android:layout_gravity="top"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
                <EditText
                    android:id="@+id/fragment_statistics__et_from_date"
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:hint="@string/start_date"
                    android:textSize="12dp"
                    android:layout_height="wrap_content"
                    android:focusable="false"/>

                <EditText
                    android:id="@+id/fragment_statistics__et_to_date"
                    android:layout_weight="2"
                    android:hint="@string/end_date"
                    android:textSize="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"/>
                <Button
                    android:padding="3dp"
                    android:id="@+id/fragment_statistics__button_show_statistics"
                    android:layout_width="wrap_content"
                    android:layout_weight="2"
                    android:background="@color/main__color_main"
                    style="?android:attr/borderlessButtonStyle"
                    android:textColor="#fff"
                    android:layout_height="wrap_content"
                    android:text="Показать"/>



            </LinearLayout>
            <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="1dp"
            android:textColor="#151515"
                android:textSize="12sp"
            android:layout_height="wrap_content"
            android:text="@string/statistics_helpbox1"/>
            <Button
                android:id="@+id/fragment_statistics__button_show_totals"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="3dp"
                android:background="@color/main__color_main"
                style="?android:attr/borderlessButtonStyle"
                android:textColor="#fff"
                android:layout_height="wrap_content"
                android:text="Итоги"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <LinearLayout
        android:id="@+id/statisticsLoader"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"></LinearLayout>
        <com.github.ybq.android.spinkit.SpinKitView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            style="@style/SpinKitView.Small.Wave"
            android:layout_width="50dp"
            android:layout_height="50dp"

            android:layout_gravity="center|center_vertical|center_horizontal"
            android:layout_weight="1"
            app:SpinKit_Color="@color/main__color_main" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"></LinearLayout>

    </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/fragment_statistics__marks_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>
    <WebView
        android:id="@+id/fragment_statistics__html_table"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>